- Provided full Instagram API credentials configuration - On admin/system-settings page, External Systems Tab - Environment variables removed: INSTAGRAM_ACCESS_TOKEN, INSTAGRAM_CLIENT_ID, INSTAGRAM_CLIENT_SECRET, INSTAGRAM_USER_ID as they are now all stored in the database - Migrated all instagram server code to typescript during refactor

--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/system-settings.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/system-settings.html
@@ -9,7 +9,7 @@
                 <div class="form-group">
                   <label for="group-href">Web Url</label>
                   <input [(ngModel)]="config.group.href"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          id="group-href"
                          placeholder="Enter a link">
                 </div>
@@ -18,7 +18,7 @@
                 <div class="form-group">
                   <label for="group-long-name">Long Name</label>
                   <input [(ngModel)]="config.group.longName"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          id="group-long-name"
                          placeholder="Enter a title for group long name">
                 </div>
@@ -27,7 +27,7 @@
                 <div class="form-group">
                   <label for="group-short-name">Short Name</label>
                   <input [(ngModel)]="config.group.shortName"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          id="group-short-name"
                          placeholder="Enter a title for group short name">
                 </div>
@@ -36,7 +36,7 @@
                 <div class="form-group">
                   <label for="group-group-code">Ramblers Group Code</label>
                   <input [(ngModel)]="config.group.groupCode"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          id="group-group-code"
                          placeholder="Enter the Ramblers group code">
                 </div>
@@ -47,7 +47,8 @@
                   <select [(ngModel)]="config.group.walkPopulation"
                           class="form-control" id="walk-population">
                     <option *ngFor="let walkPopulation of populationMethods"
-                            [ngValue]="walkPopulation.value">{{stringUtils.asTitle(walkPopulation.value)}}</option>
+                            [ngValue]="walkPopulation.value">{{ stringUtils.asTitle(walkPopulation.value) }}
+                    </option>
                   </select>
                 </div>
               </div>
@@ -197,19 +198,19 @@
                 <div class="form-group">
                   <label for="facebook-group-url">Facebook Group Url</label>
                   <input [(ngModel)]="config.externalSystems.facebook.groupUrl"
-                         type="text" value="" class="form-control input-sm" id="facebook-group-url"
+                         type="text" class="form-control input-sm" id="facebook-group-url"
                          placeholder="Enter a group url for Facebook">
                 </div>
                 <div class="form-group">
                   <label for="facebook-pages-url">Facebook Pages Url (optional)</label>
                   <input [(ngModel)]="config.externalSystems.facebook.pagesUrl"
-                         type="text" value="" class="form-control input-sm" id="facebook-pages-url"
+                         type="text" class="form-control input-sm" id="facebook-pages-url"
                          placeholder="Enter a pages url for Facebook">
                 </div>
                 <div class="form-group">
                   <label for="facebook-appId">Facebook App Id</label>
                   <input [(ngModel)]="config.externalSystems.facebook.appId"
-                         type="text" value="" class="form-control input-sm" id="facebook-appId"
+                         type="text" class="form-control input-sm" id="facebook-appId"
                          placeholder="Enter an app id for Facebook">
                 </div>
                 <div class="row">
@@ -225,34 +226,40 @@
                   <div class="col-md-6">
                     <div class="form-inline">
                       <label>Meetup Link Preview:</label>
-                      <a class="ml-2" [href]="config.externalSystems.meetup.groupUrl+'/'+config.externalSystems.meetup.groupName">{{config.externalSystems.meetup.groupName}}</a>
+                      <a class="ml-2"
+                         [href]="config.externalSystems.meetup.groupUrl+'/'+config.externalSystems.meetup.groupName">{{ config.externalSystems.meetup.groupName }}</a>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="youtube-href">Youtube</label>
                   <input [(ngModel)]="config.externalSystems.youtube"
-                         type="text" value="" class="form-control input-sm" id="youtube-href"
+                         type="text" class="form-control input-sm" id="youtube-href"
                          placeholder="Enter a group url for Youtube">
                 </div>
                 <div class="form-group">
                   <label for="twitter-href">Twitter</label>
                   <input [(ngModel)]="config.externalSystems.twitter"
-                         type="text" value="" class="form-control input-sm" id="twitter-href"
+                         type="text" class="form-control input-sm" id="twitter-href"
                          placeholder="Enter a group url for Twitter">
                 </div>
-                <div class="form-group">
-                  <label for="instagram-href">Instagram</label>
-                  <input [(ngModel)]="config.externalSystems.instagram.groupUrl"
-                         type="text" value="" class="form-control input-sm" id="instagram-href"
-                         placeholder="Enter a group url for Instagram">
-                </div>
-                <div class="custom-control custom-checkbox">
-                  <input [(ngModel)]="config.externalSystems.instagram.showFeed"
-                         type="checkbox" class="custom-control-input" id="instagram-show-feed">
-                  <label class="custom-control-label"
-                         for="instagram-show-feed">Show Instagram Feed
-                  </label>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="custom-control custom-checkbox">
+                      <input [(ngModel)]="config.externalSystems.instagram.showFooterLink"
+                             type="checkbox" class="custom-control-input" id="instagram-show-footer-link">
+                      <label class="custom-control-label"
+                             for="instagram-show-footer-link">Show Instagram
+                      </label>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-inline">
+                      <label>Instagram Link Preview:</label>
+                      <a class="ml-2"
+                         [href]="config.externalSystems.instagram.groupUrl+'/'+config.externalSystems.instagram.groupName">{{ config.externalSystems.instagram.groupName }}</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -285,7 +292,7 @@
                   <label for="main-site-href">Main Site Web Url</label>
                   <input [(ngModel)]="config.national.mainSite.href"
                          id="main-site-href"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter main site link">
                 </div>
               </div>
@@ -294,7 +301,7 @@
                   <label for="main-site-title">Main Site Name</label>
                   <input [(ngModel)]="config.national.mainSite.title"
                          id="main-site-title"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter main site title">
                 </div>
               </div>
@@ -304,14 +311,14 @@
                 </div>
                 <div class="form-group">
                   <a
-                    [href]="config.national.mainSite.href">{{config.national.mainSite.title || config.national.mainSite.href}}</a>
+                    [href]="config.national.mainSite.href">{{ config.national.mainSite.title || config.national.mainSite.href }}</a>
                 </div>
               </div>
               <div class="col-md-5">
                 <div class="form-group">
                   <label for="walks-manager-href">Walks Manager Web Url</label>
                   <input [(ngModel)]="config.national.walksManager.href" id="walks-manager-href"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter Walks Manager site link">
                 </div>
               </div>
@@ -320,7 +327,7 @@
                   <label for="walks-manager-title">Walks Manager Name</label>
                   <input [(ngModel)]="config.national.walksManager.title"
                          id="walks-manager-title"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter Walks Manager site title">
                 </div>
               </div>
@@ -330,7 +337,7 @@
                 </div>
                 <div class="form-group">
                   <a
-                    [href]="config.national.walksManager.href">{{config.national.walksManager.title || config.national.walksManager.href}}</a>
+                    [href]="config.national.walksManager.href">{{ config.national.walksManager.title || config.national.walksManager.href }}</a>
                 </div>
               </div>
               <div class="col-md-5">
@@ -340,7 +347,7 @@
                          id="walks-manager-user-name"
                          autocomplete="nope"
                          name="newPassword"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter Walks Manager userName">
                 </form>
               </div>
@@ -349,7 +356,7 @@
                   <label for="walks-manager-password" for="walks-manager-password">Walks Manager password</label>
                   <input autocomplete="nope"
                          [(ngModel)]="config.national.walksManager.password"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          id="walks-manager-password"
                          name="password"
                          placeholder="Enter Walks Manager password">
@@ -362,7 +369,7 @@
                          autocomplete="nope"
                          id="walks-manager-api-key"
                          name="apiKey"
-                         type="text" value="" class="form-control input-sm"
+                         type="text" class="form-control input-sm"
                          placeholder="Enter Walks Manager API key">
                 </form>
               </div>
@@ -373,6 +380,79 @@
           <div class="img-thumbnail thumbnail-admin-edit">
             <app-mail-provider-settings [config]="config"
                                         (membersPendingSave)="membersPendingSave=$event"></app-mail-provider-settings>
+            <div class="row img-thumbnail thumbnail-2 align-items-end">
+              <div class="thumbnail-heading">Instagram</div>
+
+              <div class="col-sm-12">
+                <div class="row" *ngIf="config?.externalSystems.instagram">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-href">Url</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.groupUrl"
+                             id="instagram-href"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram Group Url">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-group-name">Group Name</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.groupName"
+                             id="instagram-group-name"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram group name">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-user-id">User Id</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.userId"
+                             id="instagram-user-id"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram User Id">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-client-id">Client Id</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.clientId"
+                             id="instagram-client-id"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram Client Id">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-client-secret">Client Secret</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.clientSecret"
+                             id="instagram-client-secret"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram Client Secret">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="instagram-access-token">Access Token</label>
+                      <input [(ngModel)]="config.externalSystems.instagram.accessToken"
+                             id="instagram-access-token"
+                             type="text" class="form-control input-sm"
+                             placeholder="Enter Instagram Access Token">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <div class="custom-control custom-checkbox">
+                        <input [(ngModel)]="config.externalSystems.instagram.showFeed"
+                               type="checkbox" class="custom-control-input" id="instagram-show-feed">
+                        <label class="custom-control-label"
+                               for="instagram-show-feed">Show Instagram Feed
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="row img-thumbnail thumbnail-2">
               <div class="thumbnail-heading">Meetup</div>
               <div class="col-sm-12">
@@ -382,7 +462,7 @@
                       <label for="meetup-group-url">Group Url</label>
                       <input [(ngModel)]="config.externalSystems.meetup.groupUrl"
                              id="meetup-group-url"
-                             type="text" value="" class="form-control input-sm"
+                             type="text" class="form-control input-sm"
                              placeholder="Enter Meetup Group Url">
                     </div>
                   </div>
@@ -391,7 +471,7 @@
                       <label for="meetup-group-name">Group Name</label>
                       <input [(ngModel)]="config.externalSystems.meetup.groupName"
                              id="meetup-group-name"
-                             type="text" value="" class="form-control input-sm"
+                             type="text" class="form-control input-sm"
                              placeholder="Enter main site link">
                     </div>
                   </div>
@@ -400,7 +480,7 @@
                       <label for="meetup-group-url">Api Url</label>
                       <input [(ngModel)]="config.externalSystems.meetup.apiUrl"
                              id="meetup-api-url"
-                             type="text" value="" class="form-control input-sm"
+                             type="text" class="form-control input-sm"
                              placeholder="Enter Meetup API Url">
                     </div>
                   </div>
@@ -409,7 +489,7 @@
                       <label for="meetup-access-token">Access Token</label>
                       <input [(ngModel)]="config.externalSystems.meetup.accessToken"
                              id="meetup-access-token"
-                             type="text" value="" class="form-control input-sm"
+                             type="text" class="form-control input-sm"
                              placeholder="Enter Meetup Access Token">
                     </div>
                   </div>
@@ -418,7 +498,7 @@
                       <label for="meetup-api-key">API Key</label>
                       <input [(ngModel)]="config.externalSystems.meetup.apiKey"
                              id="meetup-api-key"
-                             type="text" value="" class="form-control input-sm"
+                             type="text" class="form-control input-sm"
                              placeholder="Enter Meetup API Key">
                     </div>
                   </div>
@@ -433,7 +513,7 @@
           <div class="alert {{notifyTarget.alert.class}}">
             <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon>
             <strong *ngIf="notifyTarget.alertTitle">
-              {{notifyTarget.alertTitle}}: </strong> {{notifyTarget.alertMessage}}
+              {{ notifyTarget.alertTitle }}: </strong> {{ notifyTarget.alertMessage }}
           </div>
         </div>
       </div>
