--- a/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
+++ b/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
@@ -1,7 +1,8 @@
 <app-card-container>
   <h5 class="card-title cta-button cta-instagram rounded"><a [href]="externalSystems?.instagram?.groupUrl + '/' + externalSystems?.instagram?.groupName">
     <img class="instagram-image"
-         src="/assets/images/local/instagram.png"><span class="instagram-title float-right">{{instagramPath()}}</span></a>
+         src="/assets/images/local/instagram.png"><span
+    class="instagram-title float-right">{{ externalSystems?.instagram?.groupName }}</span></a>
   </h5>
   <p class="card-text">
     <a *ngFor="let media of recentMedia" [href]="media.permalink" target="_blank"
