Mail List Subscription fixes and enhancements: * memberSubscribable property added to ListSetting to control whether a member can subscribe to a mailing list. Some mailing lists may not be created for all members to subscribe to (e.g. Committee and Testing lists) so these should not be available for selection by members in the /admin/email-subscriptions page. * All lists are still available in member admin edit page. * Fixed Bug in Member Bulk Load where imported members were getting their subscriptions reset to default values. This only happens on newly created members now. * In Member Admin table, Bulk Delete icon is now positioned in the far left rather than far right column as this can easily be nudged out of view when there are multiple lists that can be subscribed to. Unselected member has a grey icon with tick displayed rather than an empty value as this helps differentiate from selected member which has red icon with cross. * Fixed continued problem with unique keys being added to memberUpdateAudit documents via the member object. memberUpdateAuditSchema now has member field converted to object preventing the coping across of indexes from the audited member * Social event card now has list arrow rather than plan bullet

--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
@@ -89,7 +89,9 @@
             <table class="round tbl-green-g table-striped table-hover table-sm">
               <thead>
               <tr class="white-anchor">
-                <th>Action</th>
+                <th *ngIf="!confirm.bulkDeleteOutstanding()">Action</th>
+                <th *ngIf="confirm.bulkDeleteOutstanding()" (click)="sortMembersBy('markedForDelete')">
+                  Marked For Delete<span class="sorting-header">{{ memberFilter.sortDirection }}</span></th>
                 <th (click)="sortMembersBy('memberName')">Member Name
                   <span class="sorting-header" *ngIf="showMembersColumn('memberName')">
             {{ memberFilter.sortDirection }}</span>
@@ -152,16 +154,18 @@
             {{ memberFilter.sortDirection }}</span>
                   </th>
                 </ng-container>
-                <th *ngIf="confirm.bulkDeleteOutstanding()" (click)="sortMembersBy('markedForDelete')">
-                  Marked For Delete<span class="sorting-header">{{ memberFilter.sortDirection }}</span></th>
               </tr>
               </thead>
               <tbody>
               <tr *ngFor="let member of memberFilter.results">
-                <td>
+                <td *ngIf="!confirm.bulkDeleteOutstanding()">
                   <input (click)="editMember(member)" type="submit" value="edit"
                          [disabled]="notifyTarget.busy"
                          [ngClass]="notifyTarget.busy ? 'disabled-button-form': 'button-form'">
+                </td>
+                <td class="pointer" *ngIf="confirm.bulkDeleteOutstanding()" (click)="toggleDeletionMarker(member.id)">
+                  <fa-icon [icon]="markedForDelete(member.id)? faUserXmark:faUserCheck"
+                           [ngClass]="markedForDelete(member.id)?'member-delete-confirm':'member-delete'"></fa-icon>
                 </td>
                 <td>{{ member | fullNameWithAlias }}</td>
                 <td><a class="small" *ngIf="member.email" [href]="'mailto:' + member.email" placement="right"
@@ -199,10 +203,6 @@
                     <app-switch-icon [on]="subscriptionFor(member, list)"/>
                   </td>
                 </ng-container>
-                <td class="pointer" *ngIf="confirm.bulkDeleteOutstanding()" (click)="toggleDeletionMarker(member.id)">
-                  <fa-icon *ngIf="markedForDelete(member.id)" [icon]="faUserXmark"
-                           class="member-delete"></fa-icon>
-                </td>
               </tr>
               </tbody>
             </table>
