--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
@@ -107,7 +107,7 @@
                   <input autocomplete="new-password" name="new-password"
                          [(ngModel)]="member.password"
                          type="password" class="form-control input-sm" id="new-password"
-                         placeholder="Password can't be entered here">
+                         placeholder="Enter new password here">
                 </form>
               </div>
               <div class="col-sm-6">
