--- a/projects/ngx-ramblers/src/app/pages/walks/walk-meetup/walk-meetup.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-meetup/walk-meetup.component.html
@@ -2,11 +2,11 @@
   <div class="row img-thumbnail thumbnail-walk-edit">
     <div class="thumbnail-heading">Meetup</div>
     <div class="d-none">
-      <ng-template app-notification-directive></ng-template>
+      <ng-template app-notification-directive/>
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <app-markdown-editor name="meetup-help" description="Linking to Meetup"></app-markdown-editor>
+        <app-markdown-editor name="meetup-help" description="Linking to Meetup"/>
       </div>
     </div>
     <div class="row">
@@ -28,7 +28,7 @@
           <app-walk-meetup-config-parameters *ngIf="contentTextItems.length>0 && meetupConfigExists()"
                                              [contentTextItems]="contentTextItems"
                                              [renderMarkdownField]="!meetupEventDescriptionExists()"
-                                             [config]="displayedWalk.walk.config.meetup"></app-walk-meetup-config-parameters>
+                                             [config]="displayedWalk.walk.config.meetup"/>
         </div>
       </div>
       <div class="row">
@@ -39,8 +39,17 @@
                                [category]="ContentTextCategory.MEETUP_DESCRIPTION_PREFIX"
                                [text]="meetupEventDescription"
                                [rows]="7"
-                               [description]="'Meetup event description'">
-          </app-markdown-editor>
+                               [description]="'Meetup event description'"/>
+        </div>
+      </div>
+      <div class="col-sm-12">
+        <div class="form-group">
+          <label for="meetup-event-url">Meetup Event Url</label>
+          <input [(ngModel)]="displayedWalk.walk.meetupEventUrl"
+                 [disabled]="inputDisabled()"
+                 type="text" class="form-control input-sm"
+                 id="meetup-event-url"
+                 placeholder="Enter URL to Meetup Event">
         </div>
       </div>
       <div class="col-sm-8" *ngIf="allowEdits()">
