--- a/projects/ngx-ramblers/src/app/pages/admin/profile/contact-details.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/contact-details.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-sm-3">
       <div class="item-panel-heading">
-        <fa-icon [icon]="faIdCard" class="fa-5x ramblers"></fa-icon>
+        <fa-icon [icon]="faIdCard" class="fa-5x ramblers"/>
       </div>
     </div>
-    <div class="col col-sm-9">
+    <div class="col-sm-9">
       <div class="row" *ngIf="member">
-        <div class="col col-sm-6">
+        <div class="col-sm-6">
           <div class="form-group">
             <label for="membershipNumber">Ramblers Membership Number</label>
             <input disabled [ngModel]="member.membershipNumber" type="text"
@@ -17,7 +17,7 @@
                    placeholder="No Membership Number held">
           </div>
         </div>
-        <div class="col col-sm-6">
+        <div class="col-sm-6">
           <div class="form-group">
             <label for="membershipExpiryDate">Ramblers Membership Expiry Date</label>
             <input disabled [ngModel]="member.membershipExpiryDate | displayDate" type="text"
@@ -27,7 +27,7 @@
                    placeholder="No Membership Expiry Date held">
           </div>
         </div>
-        <div class="col col-sm-12">
+        <div class="col-sm-12">
           <div class="form-group">
             <label for="prof-first-name">First Name</label>
             <input [(ngModel)]="member.firstName" type="text" class="form-control input-sm"
@@ -36,7 +36,7 @@
                    placeholder="Enter First Name here">
           </div>
         </div>
-        <div class="col col-sm-12">
+        <div class="col-sm-12">
           <div class="form-group">
             <label for="prof-last-name">Last Name</label>
             <input [(ngModel)]="member.lastName" type="text" required class="form-control input-sm"
@@ -45,7 +45,7 @@
                    placeholder="Enter Last Name here">
           </div>
         </div>
-        <div class="col col-sm-12">
+        <div class="col-sm-12">
           <div class="form-group">
             <label for="prof-mobile-number">Mobile Number</label>
             <input [(ngModel)]="member.mobileNumber" type="text" required class="form-control input-sm"
@@ -54,7 +54,7 @@
                    placeholder="Enter mobile number here">
           </div>
         </div>
-        <div class="col col-sm-12">
+        <div class="col-sm-12">
           <div class="form-group">
             <label for="prof-contact-email">Contact Email</label>
             <input [(ngModel)]="member.email" type="text" required class="form-control input-sm"
@@ -63,7 +63,7 @@
                    placeholder="Enter contact email here">
           </div>
         </div>
-        <div class="col col-sm-12">
+        <div class="col-sm-12">
           <div class="form-group">
             <label for="prof-postcode">Home postcode</label>
             <input [(ngModel)]="member.postcode" type="text" required class="form-control input-sm"
@@ -72,26 +72,27 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col col-sm-12">
-          <input type="submit" [disabled]="false" value="Back to admin" (click)="profileService.backToAdmin()"
-                 class="button-form button-form-left">
-          <input type="submit" [disabled]="false" value="Save Changes" (click)="savePersonalDetails()"
-                 [ngClass]="member && !notifyTarget.busy? 'button-form button-form-left': 'disabled-button-form button-form-left'">
-          <input type="submit" value="Undo Changes" (click)="undoPersonalDetails()"
-                 [ngClass]="member && !notifyTarget.busy? 'button-form button-form-left': 'disabled-button-form button-form-left'">
-        </div>
-      </div>
     </div>
-    <div class="row">
-      <div class="col col-sm-12">
-        <div class="alert {{notifyTarget.alertClass}} mt-3" *ngIf="notifyTarget.showAlert">
-          <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon><strong *ngIf="notifyTarget.alertTitle">
-          {{notifyTarget.alertTitle}}: </strong> {{notifyTarget.alertMessage}}
-          <div *ngIf="notifyTarget.showContactUs"> contact our
-            <app-contact-us class="alert-link" roles="membership"
-                            text="Membership Administrator"></app-contact-us>
-          </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <input type="submit" [disabled]="false" value="Back to admin" (click)="profileService.backToAdmin()"
+             class="button-form button-form-left">
+      <input type="submit" [disabled]="false" value="Save Changes" (click)="savePersonalDetails()"
+             [ngClass]="member && !notifyTarget.busy? 'button-form button-form-left': 'disabled-button-form button-form-left'">
+      <input type="submit" value="Undo Changes" (click)="undoPersonalDetails()"
+             [ngClass]="member && !notifyTarget.busy? 'button-form button-form-left': 'disabled-button-form button-form-left'">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="alert {{notifyTarget.alertClass}} mt-3" *ngIf="notifyTarget.showAlert">
+        <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon>
+        <strong *ngIf="notifyTarget.alertTitle">
+          {{ notifyTarget.alertTitle }}: </strong> {{ notifyTarget.alertMessage }}
+        <div *ngIf="notifyTarget.showContactUs"> contact our
+          <app-contact-us class="alert-link" roles="membership"
+                          text="Membership Administrator"></app-contact-us>
         </div>
       </div>
     </div>
