- added walk images to walk view

--- a/projects/ngx-ramblers/src/app/modules/common/card/image/card-image.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/card/image/card-image.sass
@@ -4,3 +4,8 @@
 .small-icon-container
   height: 100px
   margin-top: 25px
+
+.card-img-fixed-height
+  height: 300px
+  object-fit: cover
+  border-radius: 6px
