- support for querying group events from ramblers walks manager - first iteration is to display all event types on the walks page

--- a/projects/ngx-ramblers/src/app/assets/styles/colours.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/colours.sass
@@ -91,6 +91,16 @@ $confirm-hover: #eb0c35
   &:hover
     color: #ff3e43
 
+.group-walk
+  font-size: 1.5em
+  color: $admin-color
+  align-content: center
+
+.group-event
+  font-size: 1.5em
+  color: $ramblers-colour-rosycheeks
+  align-content: center
+
 .ramblers
   color: $admin-color
   &:hover
