--- a/projects/ngx-ramblers/src/app/modules/common/copy-icon/copy-icon.html
+++ b/projects/ngx-ramblers/src/app/modules/common/copy-icon/copy-icon.html
@@ -4,4 +4,4 @@
 <fa-icon *ngIf="!justCopied()" container="body" [tooltip]="tooltipPreCopy"
          (click)="copyToClipboard(value)" [icon]="icon"
          class="fa-icon mr-1 pointer"></fa-icon>
-<ng-content></ng-content>
+<ng-content/>
