--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
@@ -21,58 +21,63 @@
           <thead *ngIf="showTableHeader(displayedWalk)" class="styled-table">
           <tr>
             <th class="action" *ngIf="display.walkPopulationLocal() && memberLoginService.memberLoggedIn()" width="7%">Action</th>
+            <th *ngIf="!display.walkPopulationLocal()" width="5%">Type</th>
             <th width="13%">Walk Date</th>
             <th class="d-none d-lg-table-cell" width="7%">Start Time</th>
-            <th width="32%">Walk Title</th>
+            <th width="25%">Title</th>
             <th class="d-none d-lg-table-cell" width="7%">Distance</th>
             <th class="d-none d-lg-table-cell" width="8%">Postcode</th>
-            <th class="d-none d-lg-table-cell" width="12%">Walk Leader</th>
+            <th class="d-none d-lg-table-cell" width="12%">Leader</th>
             <th class="d-none d-lg-table-cell" width="11%">Contact Phone</th>
           </tr>
           </thead>
           <tbody>
           <tr [ngClass]="tableRowEven(displayedWalk)? 'default': 'active'">
             <td *ngIf="display.walkPopulationLocal() && memberLoginService.memberLoggedIn()" id="walkAction-{{index}}"
-                class="nowrap action"><input
+                class="nowrap action" width="7%"><input
               *ngIf="displayedWalk?.walkAccessMode?.walkWritable" type="submit"
               value="{{displayedWalk?.walkAccessMode?.caption}}"
               (click)="display.edit(displayedWalk)"
               class="button-form">
             </td>
+            <td *ngIf="!display.walkPopulationLocal()" width="5%" class="d-none d-lg-table-cell event-type" (click)="display.view(displayedWalk.walk)"
+                id="eventType-{{index}}">
+              <fa-icon class="{{display.eventType(displayedWalk.walk)}}"
+                       tooltip="{{display.eventTypeTitle(displayedWalk.walk)}}" adaptivePosition
+                       [icon]="display.isWalk(displayedWalk.walk)? faWalking: faPeopleGroup"/>
+            </td>
             <td width="13%" (click)="display.view(displayedWalk.walk)" id="walkDate-{{index}}" class="nowrap walk-date">
               {{displayedWalk.walk.walkDate|displayDate}}</td>
-            <td width="7%" class="d-none d-lg-table-cell start-time" name="startTime" (click)="display.view(displayedWalk.walk)"
+            <td width="7%" class="d-none d-lg-table-cell start-time" (click)="display.view(displayedWalk.walk)"
                 id="startTime-{{index}}">{{viewWalkField(displayedWalk, 'startTime')}}</td>
-            <td width="32%" name="briefDescriptionAndStartPoint"
+            <td width="25%" name="briefDescriptionAndStartPoint"
                 (click)="display.view(displayedWalk.walk)"
                 id="briefDescription-{{index}}">{{viewWalkField(displayedWalk, 'briefDescriptionAndStartPoint')}}</td>
             <td width="7%" class="d-none d-lg-table-cell distance" (click)="display.view(displayedWalk.walk)"
-                id="distance-{{index}}"
-                name="distance">{{viewWalkField(displayedWalk, 'distance')}}</td>
+                id="distance-{{index}}">{{viewWalkField(displayedWalk, 'distance')}}
+            </td>
             <td width="8%" class="d-none d-lg-table-cell postcode" id="postcode-{{index}}">
               <a [href]="'http://maps.google.co.uk/maps?q=' + viewWalkField(displayedWalk, 'postcode')"
                  target="_blank" name="postcode"
                  tooltip="Click to locate postcode {{viewWalkField(displayedWalk, 'postcode')}} on Google Maps"
                  placement="left">{{viewWalkField(displayedWalk, 'postcode')}}</a></td>
-            <td width="12%" class="d-none d-lg-table-cell postcode" id="contactEmail-{{index}}">
+            <td width="12%" class="d-none d-lg-table-cell walk-leader" id="contactEmail-{{index}}">
               <a *ngIf="allowDetailView()" [href]="'mailto:'+ displayedWalk.walk.contactEmail"
-                 name="displayName"
                  tooltip="Click to email {{displayedWalk.walk.displayName}} at {{displayedWalk.walk.contactEmail}}"
                  placement="left">{{displayedWalk.walk.displayName}}</a>
               <span class="tooltip-link" *ngIf="!allowDetailView()" placement="left"
                     (click)="login()"
                     tooltip="Click to login as an {{group?.shortName}} member and send an email to {{displayedWalk.walk.displayName}}">
-                {{displayedWalk.walk.displayName}}</span></td>
+      {{ displayedWalk.walk.displayName }}</span></td>
             <td width="11%" class="d-none d-lg-table-cell contact-phone" id="contactPhone-{{index}}" name="contactPhone">
               <a *ngIf="allowDetailView()" [href]="'tel:' + displayedWalk.walk.contactPhone"
                  [textContent]="viewWalkField(displayedWalk, 'contactPhone')"
                  tooltip="Click to ring {{displayedWalk.walk.displayName}} on {{viewWalkField(displayedWalk, 'contactPhone')}} (mobile devices only)"
                  placement="left"></a>
               <a *ngIf="!allowDetailView()" [href]="'tel:' + displayedWalk.walk.contactPhone">
-                              <span [textContent]="viewWalkField(displayedWalk, 'contactPhone')"
-                                    name="contactPhone"
-                                    tooltip="Click to ring {{displayedWalk.walk.displayName}} on {{viewWalkField(displayedWalk, 'contactPhone')}} (mobile devices only)"
-                                    placement="left"></span></a>
+                    <span [textContent]="viewWalkField(displayedWalk, 'contactPhone')"
+                          tooltip="Click to ring {{displayedWalk.walk.displayName}} on {{viewWalkField(displayedWalk, 'contactPhone')}} (mobile devices only)"
+                          placement="left"></span></a>
               <app-walk-panel-expander class="d-none d-lg-inline" [walk]="displayedWalk.walk" [expandable]="true">
               </app-walk-panel-expander>
             </td>
